--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "nanoid": "^3.1.13",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-scripts": "^3.4.4"
+    "react-scripts": "^3.4.4",
+    "yarn-update": "^0.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
